<resources>
    <string name="app_name">Login Ui</string>
    <string name="full_name">full name</string>
    <string name="email">email</string>
    <string name="not_equals">كلمة السر غير متوافقة</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="register">Register</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="registration_failed">Registered Failed</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="childreen_clothes_text">ملابس أطفال من 0 الى 12 سنة</string>
    <string name="clothes_man_text">ملابس رجال</string>
    <string name="clothes_women_text">ملابس نساء</string>
    <string name="shoes_man_text">أحذية رجال</string>
    <string name="shoes_women_text">أحذية نساء</string>
    <string name="shoes_childreen_text">أحذية أطفال من 0 الى 12 سنة</string>
    <string name="iron">مكواة</string>
    <string name="tv">شاشة</string>
    <string name="refrigerator">ثلاجة</string>
    <string name="wach_machine">غسالة</string>
    <string name="kitcheen_tools">أدوات الطبخ</string>
    <string name="vegetables">خضار</string>
    <string name="drinka">مشروبات</string>
    <string name="dates">تمور</string>
    <string name="fruits">فواكه</string>
    <string name="candy">حلويات</string>
    <string name="others">أخرى</string>
    <string name="number_phone">رقم الجوال</string>
    <string name="create_account">انشئ حساب جديد ؟</string>
    <string name="no_account">ليس لديك حساب ؟</string>
    <string name="matress">فرشة</string>
    <string name="curtain">ستار</string>
    <string name="bed">سرير</string>
    <string name="chair">كرسي</string>
    <string name="sofa">كنب</string>
    <string name="get_car">طلب سيارة</string>
    <string name="i_delivere_it">توصيل ذاتي</string>
    <string name="baby_car">عربة</string>
    <string name="baby_chair">كرسي</string>
    <string name="baby_set">مشاية</string>
    <string name="baby_bed">سرير طفل</string>
    <string name="baby_tools">أدوات أطفال</string>
    <string name="welcomeAbout">أهلاً بك عزيزي الزائر يمكنك التواصل مع الجمعية من خلال :</string>
    <string name="TeleNumber"> هاتف الجمعية :    </string>
    <string name="bossDesc">    تحويلة مكتب الرئيس :      </string>
    <string name="boss2">   تحويلة مكتب نائب الرئيس :     </string>
    <string name="directo">        تحويلة مكتب المدير :     </string>
    <string name="reciept">         تحويلة مكتب الاستقبال:     </string>
    <string name="winners">     تحويلة مكتب خدمات المستفيدين :      </string>
    <string name="searcher">       تحويلة الباحث الاجتماعي :      </string>
    <string name="marriage">      تحويلة مكتب مبرات وقروض الزواج :        </string>
    <string name="importM">تحويلة مكتب الصادر و الوارد :   </string>
    <string name="math">تحويلة مكتب المحاسبة :        </string>
    <string name="jamyia">تعريف بالجمعية: جمعية أهلية مسجلة برقم 88 تحت إشراف وزارة العمل و التنمية الاجتماعية.</string>
    <string name="s1"> النشأة و التأسيس
جمعية البر الخيرية بالزلفي
إن الحمد لله نحمده ونستعينه و نستهديه ونستغفره و نتوب إليه ونعوذ بالله من شرور أنفسنا ومن سيئات أعمالنا , من يهده الله فلا مضل له ومن يضلل فلا هادي له  ,
        أشهد أن لا إله إلا الله وحده لا شريك له و أشهد أن محمداً عبده ورسوله ,</string>
    <string name="s2">أما بعد :-
جمعية البر الخيرية بالزلفي , انطلقت وسجلت رسمياً عام 1406 هـ فسارت بخطى ثابتة و عمل دءوب , وتجديد وتطوير مستمرين حتى صارت مضرب المثل في جمعيات المملكة فصارت مصدر فخر للزلفي و أهالي الزلفي ,
        ومصدر إعجاب و اعتزاز للمسئولين على مستوى وزارة العمل و التنمية الاجتماعية,</string>
    <string name="s3">ففي عام 1407هـ تبرع المواطن/ محمد بن ناصر الفالح و إخوانه بمبنى في حي الخالدية ليكون مقرها الأول يضم مكاتب للجمعية و جزءً منه كمستودع تابع لها ,
وفي عام  1414هـ حصلت الجمعية على مجموعة من الأراضي من الشيخ / محمد بن علي العبداللطيف رحمه الله أقام عليها مبنى أصبح مقراً للجمعية على طريق الملك فهد حالياً , وبجانبها شقق يتم تأجيرها و يعود ريعها للجمعية.</string>


</resources>
