<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEFE3"
    tools:context=".Clothes">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/backId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="10dp"
                app:srcCompat="@drawable/left_arrow" />
            <Space
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <ImageView

                android:id="@+id/dashbordId"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/dashboard_d" />


        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logoback" />
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="right"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="#196332"
                    android:fontFamily="@font/mohammad"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginRight="20dp"
                    android:text="@string/childreen_clothes_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/pointChildId"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/white_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout

                android:paddingTop="20dp"
                android:gravity="right"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="#196332"
                    android:fontFamily="@font/mohammad"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginRight="20dp"
                    android:text="@string/clothes_man_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/pointManId"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/white_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:paddingTop="20dp"
                android:gravity="right"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="#196332"
                    android:fontFamily="@font/mohammad"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginRight="20dp"
                    android:text="@string/clothes_women_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/pointWomanId"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/white_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <Button
                android:id="@+id/sureClothesId"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/mohammad"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="تأكيد"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/button_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>